# hermes-memory-wiki

./: .gitignore  LICENSE  README.md  __init__.py  plugin.yaml  pyproject.toml
docs/: configuration.md  development.md  installation.md  openclaw-feature-parity.md  pr-body.md  schema.md
docs/plans/: 2026-05-27-hermes-memory-wiki-design.md  2026-05-27-hermes-memory-wiki-execution-handoff.md  2026-05-27-hermes-memory-wiki-implementation-plan.md  2026-05-28-live-integration-tests-execution-handoff.md  2026-05-28-live-integration-tests-implementation-plan.md  2026-05-28-openclaw-feature-parity-execution-handoff.md  2026-05-28-openclaw-feature-parity-implementation-plan.md  2026-05-28-source-ingest-and-conversation-authoring-design.md  2026-05-28-source-ingest-and-conversation-authoring-execution-handoff.md  2026-05-28-source-ingest-and-conversation-authoring-implementation-plan.md
docs/references/: openclaw-memory-wiki-source-inventory.md
scripts/: smoke_fake_hermes.py  smoke_live_openai.py
src/hermes_memory_wiki/: apply.py  compile.py  config.py  embeddings.py  hybrid_search.py  (+10 more)
tests/: conftest.py  test_apply.py  test_authoring_workflow.py  test_compile.py  test_config.py  test_embeddings.py  test_get.py  test_hybrid_search.py  test_import.py  test_ingest.py  test_keyword_search.py  test_lint.py  test_markdown.py  test_paths.py  test_reindex.py  test_schema.py  test_skills.py  test_smoke_live_openai_script.py  test_smoke_workflow.py  test_tools.py  test_user_plugin_layout.py  test_vault_init.py  test_vault_read.py  test_vector_index.py  test_vector_search.py
(+6 files in other folders)
