[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-memory-wiki"
version = "0.1.0"
description = "Hermes Agent memory wiki plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
tests = ["pytest>=8"]

[project.entry-points."hermes_agent.plugins"]
memory-wiki = "hermes_memory_wiki.plugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
